--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,7 +51,7 @@ a:hover {
   background-color: #E4F9F5;
   position: relative;
   padding-top: 100px;
-  padding-bottom: 100px
+  padding-bottom: 100px;
 }
 
 .middle-container {
